I can't align the genre drop down correctly

--- a/workingBuild/assets/css/main.css
+++ b/workingBuild/assets/css/main.css
@@ -3981,7 +3981,7 @@ input, select, textarea {
 .dropbtn {
   background-color: #4CAF50;
   color: white;
-  padding: 16px;
+  padding: 16px 25px;
   font-size: 16px;
   border: none;
   position: relative;
@@ -4008,7 +4008,7 @@ input, select, textarea {
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
-  padding: 10px 10px;
+  padding: 5px 5px;
   text-decoration: none;
   display: block;
 }
